добавляет стили шрифтам на индексе

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./css/styles.css" />
     <title>Document</title>
   </head>
   <body>
@@ -36,50 +40,75 @@
         <h2>Проекты</h2>
         <ul>
           <li>
-            <img src="./images/Технокряк.jpg" alt="Проект1" />
-            <h3>Технокряк</h3>
-            <p>Веб-сайт</p>
+            <a href=""
+              ><img src="./images/Технокряк.jpg" alt="Проект1" />
+              <h3>Технокряк</h3>
+              <p>Веб-сайт</p>
+              <p>какой-то текст</p></a
+            >
           </li>
           <li>
-            <img src="./images/Постер New Orlean vs Golden Star.jpg" alt="Проект2" />
-            <h3>Постер New Orlean vs Golden Star</h3>
-            <p>Дизайн</p>
+            <a href=""
+              ><img src="./images/Постер New Orlean vs Golden Star.jpg" alt="Проект2" />
+              <h3>Постер New Orlean vs Golden Star</h3>
+              <p>Дизайн</p>
+              <p>какой-то текст</p></a
+            >
           </li>
           <li>
-            <img src="./images/Ресторан Seafood.jpg" alt="Проект3" />
-            <h3>Ресторан Seafood</h3>
-            <p>Приложение</p>
+            <a href=""
+              ><img src="./images/Ресторан Seafood.jpg" alt="Проект3" />
+              <h3>Ресторан Seafood</h3>
+              <p>Приложение</p>
+              <p>какой-то текст</p></a
+            >
           </li>
           <li>
-            <img src="./images/Проект Prime.jpg" alt="Проект4" />
-            <h3>Проект Prime</h3>
-            <p>Маркетинг</p>
+            <a href=""
+              ><img src="./images/Проект Prime.jpg" alt="Проект4" />
+              <h3>Проект Prime</h3>
+              <p>Маркетинг</p>
+              <p>какой-то текст</p></a
+            >
           </li>
           <li>
-            <img src="./images/Проект Boxes.jpg" alt="Проект5" />
-            <h3>Проект Boxes</h3>
-            <p>Приложение</p>
+            <a href=""
+              ><img src="./images/Проект Boxes.jpg" alt="Проект5" />
+              <h3>Проект Boxes</h3>
+              <p>Приложение</p>
+              <p>какой-то текст</p></a
+            >
           </li>
           <li>
-            <img src="./images/Inspiration has no Borders.jpg" alt="Проект6" />
-            <h3>Inspiration has no Borders</h3>
-            <p>Веб-сайт</p>
+            <a href="">
+              <img src="./images/Inspiration has no Borders.jpg" alt="Проект6" />
+              <h3>Inspiration has no Borders</h3>
+              <p>Веб-сайт</p>
+              <p>какой-то текст</p></a
+            >
           </li>
           <li>
-            <img src="./images/Издание Limited Edition.jpg" alt="Проект7" />
-            <h3>Издание Limited Edition</h3>
-            <p>Дизайн</p>
+            <a href=""
+              ><img src="./images/Издание Limited Edition.jpg" alt="Проект7" />
+              <h3>Издание Limited Edition</h3>
+              <p>Дизайн</p>
+              <p>какой-то текст</p></a
+            >
           </li>
           <li>
-            <img src="./images/Проект LAB.jpg" alt="Проект8" />
-            <h3>Проект LAB</h3>
-            <p>Маркетинг</p>
+            <a href=""
+              ><img src="./images/Проект LAB.jpg" alt="Проект8" />
+              <h3>Проект LAB</h3>
+              <p>Маркетинг</p>
+              <p>какой-то текст</p></a
+            >
           </li>
-          <li>
-            <img src="./images/Growing Business.jpg" alt="Проект9" />
+          <li><a href=""><img src="./images/Growing Business.jpg" alt="Проект9" />
             <h3>Growing Business</h3>
             <p>Приложение</p>
-          </li>
+            <p>какой-то текст</p>
+          </li></a>
+            
         </ul>
       </section>
     </main>
