--- a/index.html
+++ b/index.html
@@ -4,107 +4,109 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStudio</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
-      <nav>
-        <a href="/"> WebStudio </a>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+      <nav class="nav">
+        <a href="./index.html" class="link logo"> Web<span class="link logo-dark">Studio</span> </a>
+        <ul class="list navigation">
+          <li><a href="" class="link navigation-link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link navigation-link">Портфолио</a></li>
+          <li><a href="" class="link navigation-link">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="">info@devstudio.com</a></li>
-        <li><a href="">+38 096 111 11 11</a></li>
+      <ul class="list navigation-contacts">
+        <li><a href="+380961111111" class="link navigation-contacts-tel">+38 096 111 11 11</a></li>
+        <li><a href="info@devstudio.com" class="link navigation-contacts-tel">info@devstudio.com</a></li>
       </ul>
     </header>
     <main>
-      <section>
-        <h1>
+      <section class="hero" >
+        <h1 class="hero-text">
           эффективные решения <br />
           для вашего бизнеса
         </h1>
-        <button>Заказать услугу</button>
+        <button class="button">Заказать услугу</button>
       </section>
 
-      <section>
+      <section class="advantage">
         <h2>наши сильные стороны</h2>
-        <ul>
+        <ul class="list advantage-list">
           <li>
             <h3>внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <p class="advantage-link">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
           <li>
             <h3>пунктуальность</h3>
-            <p>
+            <p class="advantage-link">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
 
           <li>
             <h3>современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <p class="advantage-link">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
         </ul>
       </section>
-      <section>
+      <section class="works">
         <h2>Чем мы занимаемся</h2>
-        <ul>
+        <ul class="list works-list">
           <li>
-            <img src="./images/верстка.jpg" alt="верстка" width="370" />
+            <img class="works-list-menu" src="./images/верстка.jpg" alt="верстка" width="370" />
           </li>
           <li>
-            <img src="./images/дизайн.jpg" alt="дизайн" width="370" />
+            <img class="works-list-menu" src="./images/дизайн.jpg" alt="дизайн" width="370" />
           </li>
           <li>
-            <img src="./images/адаптация.jpg" alt="адаптация" width="370" />
+            <img class="works-list-menu" src="./images/адаптация.jpg" alt="адаптация" width="370" />
           </li>
         </ul>
       </section>
-      <section>
+      <section class="team">
         <h2>Наша команда</h2>
-        <ul>
+        <ul class="list team-list">
           <li>
-            <img src="./images/фотоигорьдемьяненко.jpg" alt="Фото Игорь Демьяненко" width="270" />
+            <img class="team-list-foto" src="./images/фотоигорьдемьяненко.jpg" alt="Фото Игорь Демьяненко" width="270" />
             <h3>Игорь Демьяненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
-            <img src="./images/фотоольгарепина.jpg" alt="Фото Ольга Репина" width="270" />
+            <img class="team-list-foto" src="./images/фотоольгарепина.jpg" alt="Фото Ольга Репина" width="270" />
             <h3>Ольга Репина</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/фотониколайтарасов.jpg" alt="Фото Николай Тарасов" width="270" />
+            <img class="team-list-foto" src="./images/фотониколайтарасов.jpg" alt="Фото Николай Тарасов" width="270" />
             <h3>Николай Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
-            <img src="./images/фотомихаилермаков.jpg" alt="Фото Михаил Ермаков" width="270" />
+            <img class="team-list-foto" src="./images/фотомихаилермаков.jpg" alt="Фото Михаил Ермаков" width="270" />
             <h3>Михаил Ермаков</h3>
             <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <h2>WebStudio</h2>
-      <address>
-        <ul>
+    <footer class="footer">
+      <h2 class="link-logo">Web <span class="link logo-withe">Studio</span></h2>
+      <address class="footer-address">
+        <ul class="list footer-address-list">
           <li>
-            <a href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer"
+            <a class="footer-address-list-link" href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
           <li>
-            <a href="mailto:info@example.com">info@example.com</a>
+            <a class="footer-address-list-link" href="mailto:info@example.com">info@example.com</a>
           </li>
           <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="footer-address-list-link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
