--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./css/styles.css" />
+        <title>Document</title>
   </head>
   <body>
     <header>
@@ -94,19 +95,19 @@
       </section>
     </main>
     <footer class="footer">
-      <h2 class="link-logo">Web <span class="link logo-withe">Studio</span></h2>
+      <h2 class="link logo">Web <span class="link logo-withe">Studio</span></h2>
       <address class="footer-address">
         <ul class="list footer-address-list">
           <li>
-            <a class="footer-address-list-link" href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer"
+            <a class="link footer-address-list-city" href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
           <li>
-            <a class="footer-address-list-link" href="mailto:info@example.com">info@example.com</a>
+            <a class="link footer-address-list-link" href="mailto:info@example.com">info@example.com</a>
           </li>
           <li>
-            <a class="footer-address-list-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link footer-address-list-link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
