добавляет модерн-нормалайз

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./css/styles.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <title>Document</title>
   </head>
   <body>
@@ -15,9 +16,9 @@
       <nav class="nav">
         <a href="./index.html" class="link logo"> Web<span class="link logo-dark">Studio</span> </a>
         <ul class="list navigation">
-          <li><a href="" class="link navigation-link">Студия</a></li>
+          <li><a href="" class="link navigation-link active">Студия</a></li>
           <li><a href="./portfolio.html" class="link navigation-link">Портфолио</a></li>
-          <li><a href="" class="link navigation-link">Контакты</a></li>
+          <li><a href="./contacts.html" class="link navigation-link">Контакты</a></li>
         </ul>
       </nav>
       <ul class="list navigation-contacts">
