--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,13 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Document</title>
   </head>
@@ -19,8 +26,8 @@
         <a href="./index.html" class="link logo"> Web<span class="link logo-dark">Studio</span> </a>
         <ul class="list navigation">
           <li><a href="./index.html" class="link navigation-link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link navigation-link">Портфолио</a></li>
-          <li><a href="" class="link navigation-link">Контакты</a></li>
+          <li><a href="./portfolio.html" class="link navigation-link active">Портфолио</a></li>
+          <li><a href="./contacts.html" class="link navigation-link">Контакты</a></li>
         </ul>
       </nav>
       <ul class="list navigation-contacts">
@@ -52,31 +59,31 @@
           <li class="projects-list-item">
             <img
               class="projects-list-item-img"
-              src="./images/Постер New Orlean vs Golden Star.jpg"
+              src="./images/постеneworleanvsgoldenstar.jpg"
               alt="Проект2"
             />
             <h3 class="projects-list-item-h">Постер New Orlean vs Golden Star</h3>
             <p class="projects-list-item-p">Дизайн</p>
           </li>
           <li class="projects-list-item">
-            <img class="projects-list-item-img" src="./images/Ресторан Seafood.jpg" alt="Проект3" />
+            <img class="projects-list-item-img" src="./images/ресторанseafood.jpg" alt="Проект3" />
             <h3 class="projects-list-item-h">Ресторан Seafood</h3>
             <p class="projects-list-item-p">Приложение</p>
           </li>
           <li class="projects-list-item">
-            <img class="projects-list-item-img" src="./images/Проект Prime.jpg" alt="Проект4" />
+            <img class="projects-list-item-img" src="./images/проектprime.jpg" alt="Проект4" />
             <h3 class="projects-list-item-h">Проект Prime</h3>
             <p class="projects-list-item-p">Маркетинг</p>
           </li>
           <li class="projects-list-item">
-            <img class="projects-list-item-img" src="./images/Проект Boxes.jpg" alt="Проект5" />
+            <img class="projects-list-item-img" src="./images/проектboxes.jpg" alt="Проект5" />
             <h3 class="projects-list-item-h">Проект Boxes</h3>
             <p class="projects-list-item-p">Приложение</p>
           </li>
           <li class="projects-list-item">
             <img
               class="projects-list-item-img"
-              src="./images/Inspiration has no Borders.jpg"
+              src="./images/inspirationhasnoborders.jpg"
               alt="Проект6"
             />
             <h3 class="projects-list-item-h">Inspiration has no Borders</h3>
@@ -85,19 +92,19 @@
           <li class="projects-list-item">
             <img
               class="projects-list-item-img"
-              src="./images/Издание Limited Edition.jpg"
+              src="./images/изданиеlimitededition.jpg"
               alt="Проект7"
             />
             <h3 class="projects-list-item-h">Издание Limited Edition</h3>
             <p class="projects-list-item-p">Дизайн</p>
           </li>
           <li class="projects-list-item">
-            <img class="projects-list-item-img" src="./images/Проект LAB.jpg" alt="Проект8" />
+            <img class="projects-list-item-img" src="./images/проектlab.jpg" alt="Проект8" />
             <h3 class="projects-list-item-h">Проект LAB</h3>
             <p class="projects-list-item-p">Маркетинг</p>
           </li>
           <li class="projects-list-item">
-            <img class="projects-list-item-img" src="./images/Growing Business.jpg" alt="Проект9" />
+            <img class="projects-list-item-img" src="./images/growingbusiness.jpg" alt="Проект9" />
             <h3 class="projects-list-item-h">Growing Business</h3>
             <p class="projects-list-item-p">Приложение</p>
           </li>
